Fixed layout bugs

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -47,6 +47,7 @@ footer {
     color: #5B5B5B;
     text-decoration: none;
     font-weight: 400;
+    white-space: nowrap;
 }
 
 .limit__help {
