--- a/styles/globalstyles.css
+++ b/styles/globalstyles.css
@@ -1,16 +1,16 @@
 @font-face {
     font-family: "Aeonik";
-    src: url("../assets/fonts/AeonikTRIAL-Bold.otf");
+    src: local(Aeonik), url("../assets/fonts/AeonikTRIAL-Bold.otf");
 }
 
 @font-face {
     font-family: "Aeonik";
-    src: url("../assets/fonts/AeonikTRIAL-Light.otf");
+    src:local(Aeonik), url("../assets/fonts/AeonikTRIAL-Light.otf");
 }
 
 @font-face {
     font-family: "Aeonik";
-    src: url("../assets/fonts/AeonikTRIAL-Regular.otf");
+    src: local(Aeonik), url("../assets/fonts/AeonikTRIAL-Regular.otf");
 }
 
 
