--- a/styles/header.css
+++ b/styles/header.css
@@ -30,7 +30,7 @@ nav a {
     color: #FFF;
     text-decoration: none;
     font-size: 16px;
-    font-weight: 300;
+    font-weight: normal;
     line-height: 19px;
 }
 
