--- a/styles/maincontent.css
+++ b/styles/maincontent.css
@@ -140,7 +140,7 @@ h2 {
 }
 
 .destinies-cards__location01 .text{
-    font-weight: 400;
+    font-weight: normal;
     font-size: 16px;
     line-height: 19px;
     width: 344px;
@@ -180,7 +180,7 @@ h2 {
     color: #605CA8;
     line-height: 25px;
     font-size: 21px;
-    font-weight: 400;
+    font-weight: bold;
 }
 
 .destinies-cards__location02 h3 {
@@ -191,7 +191,7 @@ h2 {
 }
 
 .destinies-cards__location02 .text{
-    font-weight: 400;
+    font-weight: normal;
     font-size: 16px;
     line-height: 19px;
     width: 344px;
@@ -362,6 +362,7 @@ h2 {
     font-size: 16px;
     line-height: 19px;
     font-weight: 500;
+    cursor: pointer;
 }
 
 .data__terms {
